--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "the-kingswood-website",
+  "description": "Gatsby website for The Kingswood",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Tim Hingston <tim@thekingswood.com.au",
   "dependencies": {
     "gatsby": "next",
     "gatsby-plugin-react-helmet": "next",
