--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Tim Hingston <tim@thekingswood.com.au",
   "dependencies": {
     "gatsby": "^2.0.77",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-manifest": "^2.0.12",
+    "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0"
